Fixes separator overlapping dates in date range input.

--- a/tool-ui/src/main/webapp/style/v3/search.less
+++ b/tool-ui/src/main/webapp/style/v3/search.less
@@ -308,16 +308,17 @@
       border-top-left-radius: 0;
       border-top-right-radius: 0;
       margin-top: -1px;
-    }
+      position: relative;
 
-    &:before {
-      border-top: 1px solid @color-separator;
-      content: '';
-      height: 0;
-      left: 10px;
-      position: absolute;
-      top: 29px;
-      right: 35px;
+      &:after {
+        border-top: 1px solid @color-separator;
+        content: '';
+        height: 0;
+        left: 10px;
+        position: absolute;
+        top: 0;
+        right: 10px;
+      }
     }
   }
 
